--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "getenv": "^0.6.0",
     "moment": "^2.17.0",
     "mongoose": "^5.0.2",
+    "mongoose-long": "^0.1.1",
     "winston": "^2.2.0",
     "winston-sentry": "^0.1.4"
   },
