--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "dependencies": {
     "bluebird": "^3.4.1",
     "moment": "^2.17.0",
-    "mongoose": "^5.0.2",
+    "mongoose": "5.4.10",
     "mongoose-long": "^0.2.0",
     "winston": "^2.2.0",
     "winston-sentry": "^0.1.4"
