--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dyno.gg/datafactory",
-  "version": "1.4.7",
+  "version": "1.5.0",
   "homepage": "https://github.com/FlexLabs/Dyno-datafactory",
   "author": {
     "name": "Brian Tanner",
@@ -17,8 +17,8 @@
   "dependencies": {
     "bluebird": "^3.4.1",
     "moment": "^2.17.0",
-    "mongoose": "5.4.10",
-    "mongoose-long": "^0.2.0",
+    "mongoose": ">=5.7.0",
+    "mongoose-long": "^0.3.1",
     "winston": "^2.2.0",
     "winston-sentry": "^0.1.4"
   },
